--- a/html/index.html
+++ b/html/index.html
@@ -14,7 +14,7 @@
 			</div>
 			<div class="contacts">
 				<div>
-					mail: lena@mail.com
+					mail: lena@mail.ru
 				</div>
 				<div>
 					phone: 34-25-14
